Fix project card on mobile

--- a/assets/frontend/css/custom.css
+++ b/assets/frontend/css/custom.css
@@ -12,6 +12,11 @@
     }
 }
 
+.dropdown-menu {
+    min-width: 50px;
+    text-align: center;
+}
+
 .staff-member {
     background: #ffff !important;
 }
